--- a/project/SPT.Launcher/Views/Dialogs/ConfirmationDialogView.axaml
+++ b/project/SPT.Launcher/Views/Dialogs/ConfirmationDialogView.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:dialogHost="clr-namespace:DialogHost;assembly=DialogHost.Avalonia"
+             xmlns:dialogHostAvalonia="clr-namespace:DialogHostAvalonia;assembly=DialogHost.Avalonia"
              xmlns:s="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SPT.Launcher.Views.Dialogs.ConfirmationDialogView"
@@ -17,7 +17,7 @@
     <StackPanel Grid.Row="1" Grid.Column="1"
                 Orientation="Horizontal" Spacing="10">
       <Button Content="{Binding ConfirmButtonText}"
-              Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=dialogHost:DialogHost}, Path=CloseDialogCommand}"
+              Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=dialogHostAvalonia:DialogHost}, Path=CloseDialogCommand}"
               Classes="yellow"
               IsEnabled="{Binding AllowConfirm}"
             >
@@ -26,7 +26,7 @@
         </Button.CommandParameter>
       </Button>
       <Button Content="{Binding DenyButtonText}"
-              Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=dialogHost:DialogHost}, Path=CloseDialogCommand}"
+              Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=dialogHostAvalonia:DialogHost}, Path=CloseDialogCommand}"
             >
         <Button.CommandParameter>
           <s:Boolean>False</s:Boolean>
