--- a/project/SPT.Launcher/Views/MainWindow.axaml
+++ b/project/SPT.Launcher/Views/MainWindow.axaml
@@ -5,9 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:cc="using:SPT.Launcher.CustomControls"
         xmlns:rxui="using:Avalonia.ReactiveUI"
-        xmlns:helpers="using:SPT.Launcher.Helpers"
         xmlns:cvt="using:SPT.Launcher.Converters"
-        xmlns:dialogHost="clr-namespace:DialogHost;assembly=DialogHost.Avalonia"
+        xmlns:dialogHostAvalonia="clr-namespace:DialogHostAvalonia;assembly=DialogHost.Avalonia"
         mc:Ignorable="d" d:DesignWidth="750" d:DesignHeight="450"
         x:Class="SPT.Launcher.Views.MainWindow"
         Icon="/Assets/spt-logo.ico"
@@ -47,14 +46,14 @@
            />
 
 
-		<dialogHost:DialogHost Identifier="mainHost" Grid.Row="1" Grid.RowSpan="2"
-							   CornerRadius="5"
-							   DialogMargin="0"
-							   OverlayBackground="{StaticResource SPT_Background_Light}"
-                           >
+		<dialogHostAvalonia:DialogHost Identifier="mainHost" Grid.Row="1" Grid.RowSpan="2"
+		                               CornerRadius="5"
+		                               DialogMargin="0"
+		                               OverlayBackground="{StaticResource SPT_Background_Light}"
+		>
 			<rxui:RoutedViewHost Router="{Binding Router}"
 								 />
-		</dialogHost:DialogHost>
+		</dialogHostAvalonia:DialogHost>
 
 		<Label Content="{Binding VersionInfo.Tag}" Grid.Row="1"
 			   HorizontalAlignment="Right"
