--- a/project/SPT.Launcher/CustomControls/TitleBar.axaml
+++ b/project/SPT.Launcher/CustomControls/TitleBar.axaml
@@ -8,14 +8,13 @@
 
 	<Grid ColumnDefinitions="AUTO,*,AUTO,10,AUTO,AUTO">
 
-		<Rectangle Grid.ColumnSpan="6" IsHitTestVisible="False"
+		<Rectangle Grid.ColumnSpan="6"
 				   Fill="{Binding Background, RelativeSource={
                       RelativeSource AncestorType=UserControl}}"
                  />
 
 		<Label Content="{Binding Title, RelativeSource={
 			               RelativeSource AncestorType=UserControl}}"
-			   IsHitTestVisible="False"
 			   Foreground="{Binding Foreground, RelativeSource={
 			                  RelativeSource AncestorType=UserControl}}"
 			   Background="Transparent"
