--- a/project/SPT.Launcher/Views/SettingsView.axaml
+++ b/project/SPT.Launcher/Views/SettingsView.axaml
@@ -64,7 +64,9 @@
 
     <!-- ROW 3 (extended space) -->
     
-    <CheckBox Grid.Row="4" Grid.Column="1" Content="{Binding Source={x:Static helpers:LocalizationProvider.Instance}, Path=dev_mode}" IsChecked="{Binding Source={x:Static helpers:LauncherSettingsProvider.Instance}, Path=IsDevMode}"/>
+    <CheckBox Grid.Row="4" Grid.Column="1" IsChecked="{Binding Source={x:Static helpers:LauncherSettingsProvider.Instance}, Path=IsDevMode}">
+      <TextBlock Text="{Binding Source={x:Static helpers:LocalizationProvider.Instance}, Path=dev_mode}"/>
+    </CheckBox>
     
     <!-- Game Path -->
     <StackPanel Grid.Row="5" Grid.Column="1" Margin="0 10 10 10" IsEnabled="{Binding Source={x:Static helpers:LauncherSettingsProvider.Instance}, Path=IsDevMode}">
