remove windows only font and use paths for common icons

--- a/project/SPT.Launcher/App.axaml
+++ b/project/SPT.Launcher/App.axaml
@@ -79,6 +79,18 @@
 		<PathGeometry x:Key="Info" Figures="M 12 1.999 c 5.524 0 10.002 4.478 10.002 10.002 c 0 5.523 -4.478 10.001 -10.002 10.001 c -5.524 0 -10.002 -4.478 -10.002 -10.001 C 1.998 6.477 6.476 1.999 12 1.999 Z m -0.004 8.25 a 1 1 0 0 0 -0.992 0.885 l -0.007 0.116 l 0.003 5.502 l 0.007 0.117 a 1 1 0 0 0 1.987 -0.002 L 13 16.75 l -0.003 -5.501 l -0.007 -0.117 a 1 1 0 0 0 -0.994 -0.882 Z M 12 6.5 a 1.251 1.251 0 1 0 0 2.503 A 1.251 1.251 0 0 0 12 6.5 Z" 
 		              FillRule="NonZero"
 		              />
+		
+		<PathGeometry x:Key="BackArrow" Figures="M12 2.001c5.524 0 10 4.477 10 10s-4.476 10-10 10c-5.522 0-10-4.477-10-10s4.478-10 10-10Zm.781 5.469-.084-.073a.75.75 0 0 0-.883-.007l-.094.08-.072.084a.75.75 0 0 0-.007.883l.08.094 2.719 2.72H7.75l-.102.006a.75.75 0 0 0-.641.642L7 12l.007.102a.75.75 0 0 0 .641.641l.102.007h6.69l-2.72 2.72-.073.085a.75.75 0 0 0 1.05 1.05l.083-.073 4.002-4 .072-.085a.75.75 0 0 0 .008-.882l-.08-.094-4-4.001-.085-.073.084.073Z"
+		              FillRule="NonZero"
+		              />
+		
+		<PathGeometry x:Key="Close" Figures="m4.21 4.387.083-.094a1 1 0 0 1 1.32-.083l.094.083L12 10.585l6.293-6.292a1 1 0 1 1 1.414 1.414L13.415 12l6.292 6.293a1 1 0 0 1 .083 1.32l-.083.094a1 1 0 0 1-1.32.083l-.094-.083L12 13.415l-6.293 6.292a1 1 0 0 1-1.414-1.414L10.585 12 4.293 5.707a1 1 0 0 1-.083-1.32l.083-.094-.083.094Z"
+		              FillRule="NonZero"
+		              />
+		
+		<PathGeometry x:Key="Minimize" Figures="M3.997 13H20a1 1 0 1 0 0-2H3.997a1 1 0 1 0 0 2Z"
+		              FillRule="NonZero"
+		              />
 
 	</Application.Resources>
 </Application>
