--- a/project/SPT.Launcher/CustomControls/TitleBar.axaml
+++ b/project/SPT.Launcher/CustomControls/TitleBar.axaml
@@ -23,8 +23,7 @@
 			     />
 
 		<!-- Setting button -->
-		<Button x:Name="stb"
-				Grid.Column="2"
+		<Button Grid.Column="2"
 				FontSize="12"
 				Command="{Binding SettingsButtonCommand, RelativeSource={
 			              RelativeSource AncestorType=UserControl}}"
@@ -33,14 +32,19 @@
 				IsVisible="{Binding Source={x:Static helpers:LauncherSettingsProvider.Instance}, Path=AllowSettings}"
             >
 			<StackPanel Orientation="Horizontal">
-				<Path Data="{StaticResource Gear}" Fill="{Binding ElementName=stb, Path=Foreground}"
-					  Margin="2"/>
+				<TextBlock HorizontalAlignment="Center" VerticalAlignment="Center">
+					<Viewbox Width="14" Height="14" Margin="2">
+						<Path Data="{StaticResource Gear}" 
+						      Fill="{Binding $parent[TextBlock].Foreground}"
+						/>
+					</Viewbox>
+				</TextBlock>
 				<TextBlock Text="{Binding Source={x:Static helpers:LocalizationProvider.Instance}, Path=settings_menu}"/>
 			</StackPanel>
 		</Button>
 
 		<!-- Minimize (-) Button -->
-		<Button Content="&#xE949;" Grid.Column="4"
+		<Button Grid.Column="4"
 				Foreground="{Binding ButtonForeground, RelativeSource={
 												 RelativeSource AncestorType=UserControl}}"
 				Command="{Binding MinButtonCommand, RelativeSource={
@@ -49,10 +53,16 @@
 				HorizontalContentAlignment="Center"
 				VerticalContentAlignment="Center"
 				VerticalAlignment="Stretch"
-				FontFamily="Segoe MDL2 Assets"
 				CornerRadius="0"
 				Width="35"
             >
+			<Viewbox Width="15" Height="15">
+				<TextBlock HorizontalAlignment="Center" VerticalAlignment="Center">
+					<Path Data="{StaticResource Minimize}"
+					      Fill="{Binding $parent[TextBlock].Foreground}"
+					/>
+				</TextBlock>
+			</Viewbox>
 			<Button.Styles>
 				<Style Selector="Button:pointerover /template/ ContentPresenter">
 					<Setter Property="Background" Value="{DynamicResource AccentBrush2}"/>
@@ -65,7 +75,7 @@
 		</Button>
 
 		<!-- Close (X) Button -->
-		<Button Content="&#xE106;" Grid.Column="5"
+		<Button Grid.Column="5"
 				Foreground="{Binding ButtonForeground, RelativeSource={
 				             RelativeSource AncestorType=UserControl}}"
 				Command="{Binding XButtonCommand, RelativeSource={
@@ -74,10 +84,16 @@
 				HorizontalContentAlignment="Center"
 				VerticalContentAlignment="Center"
 				VerticalAlignment="Stretch"
-				FontFamily="Segoe MDL2 Assets"
 				CornerRadius="0"
 				Width="35"
             >
+			<Viewbox Width="15" Height="15">
+				<TextBlock>
+					<Path Data="{StaticResource Close}"
+					      Fill="{Binding $parent[TextBlock].Foreground}"
+					/>
+				</TextBlock>
+			</Viewbox>
 			<Button.Styles>
 				<Style Selector="Button:pointerover /template/ ContentPresenter">
 					<Setter Property="Background" Value="IndianRed"/>
