--- a/project/SPT.Launcher/Views/SettingsView.axaml
+++ b/project/SPT.Launcher/Views/SettingsView.axaml
@@ -39,11 +39,17 @@
     </WrapPanel>
     
     <!-- Go Back -->
-    <Button Content="&#x279C;" FontSize="25"
-            Grid.Row="1" Grid.Column="3"
+    <Button Grid.Row="1" Grid.Column="3"
             Command="{Binding GoBackCommand}"
-            Classes="link"
-            />
+            Classes="link">
+      <TextBlock>
+        <Viewbox Height="30" Width="30">
+          <Path Data="{StaticResource BackArrow}"
+                Fill="{Binding $parent[TextBlock].Foreground}"
+          />
+        </Viewbox>
+      </TextBlock>
+    </Button>
     
     <!-- Default locale -->
     <StackPanel Grid.Row="2" Grid.Column="1">
